# berrypatch

./: .gitignore  LICENSE.txt  Pipfile  README.md  install.sh  pyproject.toml  setup.cfg  setup.py
berrypatch/: cli.py  config.py  core.py  errors.py  meta.py  templates.py
