[metadata]
name = berrypatch
version = 0.0.1

[files]
packages = berrypatch

[entry_points]
console_scripts =
    bp = berrypatch.cli:cli

[flake8]
exclude=build,.git
ignore=E128,E265,E266,E501,W601
max-line-length=100

[tool:pytest]
addopts = -ra --lfnf=all
testpaths = berrypatch/
python_files = tests.py test_*.py *_tests.py *_test.py

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
