[metadata]
name = berrypatch
version = 0.0.1
home-page = https://github.com/berrypatch/berrypatch
license = MIT
license-file = LICENSE.txt
platform = any

[files]
packages = berrypatch

[entry_points]
console_scripts =
    bp = berrypatch.cli:cli

[options]
install_requires =
    click
    coloredlogs
    jinja2

[flake8]
exclude=build,.git
ignore=E128,E265,E266,E501,W601
max-line-length=100

[tool:pytest]
addopts = -ra --lfnf=all
testpaths = berrypatch/
python_files = tests.py test_*.py *_tests.py *_test.py

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
